--- a/style.css
+++ b/style.css
@@ -3577,3 +3577,7 @@ ul.htc__instagram__posts.owl-carousel li img {
     font-weight: bold;
 }
 
+.forgot_password{margin-left: 10px;
+    font-size: 20px;}
+
+.password_label{font-size:20px;}
